--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>limo_tp</name>
+  <name>projetpeip</name>
   <version>0.0.0</version>
   <description>The limo_tp package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="selengag@todo.todo">selengag</maintainer>
+  <maintainer email="Homer.simpson@uca.fr"> Homer Simpson</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
